package fr.utt.lo02.core.components;

public enum Command {
    EXPAND,
    EXPLORE,
    EXTERMINATE
}
