package fr.utt.lo02.saves;

public class Data_manipulator {
}
